src/objects/Yadochou__c.object
<CustomObject>
    <description>Guest Book Header</description>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Field1__r.Rroom__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>御部屋名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>Field1__r.ReservationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>宿泊日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>特記事項</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LeadIndexId__c</fullName>
        <formula>Field1__r.LeadIndexRef__c</formula>
        <label>予約インデックスID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSignature__c</fullName>
        <label>全ページ署名</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RespectLstCal__c</fullName>
        <formula>text(Field1__r.RespectLst__c)</formula>
        <label>敬称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>Field1__r.ShopCodeCal__c</formula>
        <label>$店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>署名</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>宿帳</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field1__c</columns>
        <columns>Field15__c</columns>
        <columns>Field12__c</columns>
        <columns>Field13__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>宿帳名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>